tests/samples/negative/visibility/private_reexport_import.ax
module private_reexport_import;

import samplelib.private_facade as facade;

fn main() -> i32 {
    let value: facade.Count = facade.local_use();
    return value;
}
